# hl-verify-wallet

./: pyproject.toml
scripts/: fetch_wallet_demo.py
src/hl_verify_wallet/: app.py  config.py  errors.py
src/hl_verify_wallet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hl_verify_wallet/adapters/: hyperliquid_client.py  hyperliquid_info_provider.py  redshift_data_api_provider.py
src/hl_verify_wallet/adapters/sinks/: memory_sink.py
src/hl_verify_wallet/adapters/state_repo/: memory_state_repo.py
src/hl_verify_wallet/domain/: models.py  time_window.py
src/hl_verify_wallet/orchestrators/: verify_wallet_usecase.py
src/hl_verify_wallet/ports/: sink.py  state_repository.py
src/hl_verify_wallet/presenters/: json_presenter.py
src/hl_verify_wallet/services/backfill/: hl_backfill.py
src/hl_verify_wallet/services/matching/: hash_coin_side_matcher.py
src/hl_verify_wallet/services/normalize/: trade_row.py
tests/unit/: test_hl_backfill.py
