[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hl-verify-wallet"
version = "0.1.0"
description = "Hyperliquid wallet fills verification tool (Redshift ↔︎ HL)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hl_verify_wallet*"]
